mesh-configuration/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kenlovs
spec:
  hosts:
  - "*"
  gateways:
  - kenlo-gateway
  http:
  - match:
    - uri:
        prefix: /accounts  
    route:
    - destination:
        host: accounts
